err/textprocess.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/textprocess'...
Compiling './lib/python3.5/site-packages/textprocess/stemmer.py'...
***   File "./lib/python3.5/site-packages/textprocess/stemmer.py", line 421
    print lemmatize("Sankararaman case: Kanchi seers, other accused acquitted")
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/textprocess/test.py'...
***   File "./lib/python3.5/site-packages/textprocess/test.py", line 4
    print preprocess("Sankararaman case: Kanchi seers, other accused acquitted".split(' '))
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/textprocess-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
